[project]
name = "snakefunc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Benner", email = "james.benner@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
