[project]
name = "snakefunc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Benner", email = "james.benner@gmail.com" }
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "expects>=0.9.0",
    "fencechecker@git+https://github.com/jbenner-radham/fencechecker.git@main",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
